# TiagoBears_plan

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
config/: behaviour_params_real.yaml  behaviour_params_sim.yaml  task_params.yaml  task_params_.yaml  task_params_real.yaml  task_params_sim.yaml
launch/: load_config.launch  load_config_all.launch  tiago_bears_stack.launch
scripts/: TiagoBears_stack.py  test_node.py  test_node_pose_est.py
src/: behaviour_class.py
src/TiagoBears_plan/: behaviour_class.py  grasp_wrapper_class.py  task_class.py
